<resources>
    <string name="app_name">SILYS</string>


    <!-- activity_main.xml -->
    <string name="title_welcome">BIENVENIDO</string>
    <string name="hint_input_code">Código</string>
    <string name="hint_input_dni">Documento</string>
    <string name="hint_input_password">Contraseña</string>
    <string name="text_button_login">Iniciar sesión</string>

    <!-- view_toolbar.xml -->
    <string name="content_description_image_back">back button</string>

    <!-- view_request_home.xml -->
    <string name="content_description_image_add_new_request">Add</string>

    <!-- view_request_description.xml -->
    <string name="text_settled_request">Numero de radicado:</string>
    <string name="text_items_approved">Implementos aprobados</string>
    <string name="text_comments">Comentarios:</string>
    <string name="content_description_image_request">Imagen Laboratorio</string>

    <!-- Example text -->
    <string name="example_title">Titulo de ejemplo</string>
    <string name="no_requests">No hay solicitudes aún…</string>
    <string name="example_subtitle">Descripcion del titulo para obtener mas informacion</string>
    <string name="example_name_user">Nombre Usuario</string>
    <string name="example_code_user">Código</string>
    <string name="example_profile_user">NU</string>
    <string name="example_status">Aprobado</string>
    <string name="example_name_project">Nombre del proyecto</string>
    <string name="example_id_request"><b>Solicitud: </b>ID de la solicitud</string>
    <string name="example_date_request"><b>Fecha de solicitud: </b>12/09/2025</string>
    <string name="example_date_approved"><b>Fecha de aprobacion: </b>12/11/2025</string>
    <string name="example_topic_request"><b>Materia: </b>193505 - Electronica General A</string>
    <string name="example_laboratory_request"><b>Laboratorio: </b>LBROB</string>
    <string name="example_description_request"><b>Motivo: </b>Solicitado para el proyecto de electronica que sera presentado en la feria de proyecto de fin de semestre. </string>
    <string name="example_settled_request">27366DJDYNF</string>
    <string name="example_item_request">Arduino</string>
    <string name="proyecto">Proyecto</string>
    <string name="laboratorios">Laboratorios</string>
    <string name="codigo_de_la_materia">Código de la materia</string>
    <string name="nombre_de_la_materia">Nombre de la materia</string>
    <string name="motivo_de_la_solicitud">Motivo de la solicitud</string>
    <string name="anadir_implementos">Añadir implementos</string>
    <string name="enviar_solicitud">Enviar solicitud</string>
    <string name="ingrese_implemento">Ingrese implemento</string>

    <string-array name="implement_list">
        <item>Arduino Uno</item>
        <item>Panel Solar</item>
        <item>Protoboard</item>
    </string-array>

    <string-array name="labs">
        <item>Robotica</item>
        <item>Redes y telecomunicaciones</item>
    </string-array>

    <string-array name="topics">
        <item>193505A - Electronica General A</item>
        <item>193907A - Tópicos Avanzados en Ingenie</item>
        <item>193904A - Proyecto Integrador III</item>
    </string-array>

</resources>