<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/outline_view"
    android:paddingVertical="20sp"
    android:paddingHorizontal="10sp"
    android:elevation="1dp">

    <ImageView
        android:id="@+id/img_lab_request"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="3"
        android:layout_gravity="center"
        android:src="@drawable/chip"
        android:contentDescription="@string/content_description_image_request"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_project_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="3dp"
                android:layout_weight="7"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/example_name_project"
                android:textColor="@color/base_blue_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <include layout="@layout/item_recycler_status"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_request_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:text="@string/example_id_request"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_date_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            app:drawableStartCompat="@drawable/date_icon"
            android:drawablePadding="2dp"
            android:gravity="center_vertical"
            android:text="@string/example_date_request"
            android:textColor="@color/gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_topic_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_topic_request"
            android:textColor="@color/gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_lab_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:text="@string/example_laboratory_request"
            android:textColor="@color/gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_description_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:text="@string/example_description_request"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:maxLines="3"
            android:ellipsize="end"/>
    </LinearLayout>
</LinearLayout>