<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/curve_container_bottom"
        android:padding="15dp"
        android:gravity="center">

        <ImageButton
            android:id="@+id/btn_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/exit_button"
            android:background="@android:color/transparent"
            android:contentDescription="@string/content_description_image_back"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="end"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_name_user"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/user_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_code_user"
                    android:textColor="@color/light_gray"
                    android:textSize="15sp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/prefix_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_profile_user"
                android:textColor="@color/base_blue_color"
                android:textStyle="bold"
                android:textSize="20sp"
                android:background="@drawable/circle_style"
                android:layout_marginHorizontal="9dp"
                android:padding="15dp"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>