<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_blue_color"
    tools:ignore="ContentDescription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/gl_12"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/view_toolbar" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/curve_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_12">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            app:layout_constraintBottom_toTopOf="@id/gl_23"
            app:layout_constraintTop_toTopOf="parent">

            <include layout="@layout/view_title_subtitle" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="0dp"
            app:layout_constraintGuide_percent="0.13" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/outline_view"
            android:orientation="vertical"
            android:paddingVertical="5dp"
            app:layout_constraintBottom_toTopOf="@id/gl_85"
            app:layout_constraintTop_toBottomOf="@id/gl_23">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/gl_85"
                app:layout_constraintTop_toBottomOf="@id/gl_23"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingVertical="5dp">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/CustomEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/proyecto"
                        android:paddingHorizontal="20dp">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/CustomTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/instrument_sans" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Spinner
                        android:id="@+id/spinner_laboratories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="20dp"
                        android:background="@color/white"/>
                    <Spinner
                        android:id="@+id/spinner_topics"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="20dp"
                        android:background="@color/white"/>
<!--

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/CustomEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/codigo_de_la_materia"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/CustomTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/instrument_sans" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/CustomEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nombre_de_la_materia"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/CustomTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/instrument_sans" />
                    </com.google.android.material.textfield.TextInputLayout>
-->

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/CustomEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/motivo_de_la_solicitud"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/CustomTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/instrument_sans" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical">

                            <ImageButton
                                android:id="@+id/btn_add_item"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:background="@android:color/transparent"
                                android:scaleType="fitCenter"
                                android:src="@drawable/plus" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginHorizontal="5dp"
                                android:gravity="center"
                                android:text="@string/anadir_implementos"
                                android:textColor="@color/font_color"
                                android:textSize="20sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ly_item_container"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="8dp"
                            android:gravity="center_vertical"
                            android:orientation="vertical" />

                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_85"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="0dp"
            app:layout_constraintGuide_percent="0.85" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_request"
            style="@style/CustomButtonStyle"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:letterSpacing="0"
            android:text="@string/enviar_solicitud"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gl_85" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>